[svn r516] [iRedMail]     * Add patch to fix login security issue. Reference:       https://sourceforge.net/mailarchive/forum.php?thread_name=49057E07.3060806%40gmail.com&forum_name=postfixadmin-devel

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.3.2:
+    * Add patch to fix login security issue. Reference:
+      https://sourceforge.net/mailarchive/forum.php?thread_name=49057E07.3060806%40gmail.com&forum_name=postfixadmin-devel
     * Improve dovecot quota warning support.
     * Add bzip2 as compress command in logrotate. Enabled by default.
     * Integrate expire plugin support for Dovecot.
