--- a/iRedAdmin/languages/cn.lang
+++ b/iRedAdmin/languages/cn.lang
@@ -22,8 +22,7 @@ $PALANG['pLogin_welcome'] = '邮件管理员请从这里登录以管理你的域
 $PALANG['pLogin_username'] = '帐号 (邮件地址)';
 $PALANG['pLogin_password'] = '密码';
 $PALANG['pLogin_button'] = '登录';
-$PALANG['pLogin_username_incorrect'] = '<span class="error_msg">登录失败, 请确认你是使用你的邮件地址登录!</span>';
-$PALANG['pLogin_password_incorrect'] = '<span class="error_msg">密码错误!</span>';
+$PALANG['pLogin_incorrect'] = '<span class="error_msg">用户名或密码错误！</span>';
 $PALANG['pLogin_login_users'] = '普通用户点击这里进入用户控制面板.';
 
 $PALANG['pMenu_main'] = 'Main'; # XXX
