--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.6.0-RC1:
+    * Patch to fix roundcube security issue: CVE-2010-0464, Disable DNS
+      prefetching.
     * New LDAP attribute: userManager. Used to replace 'manager' attribute.
     * Update iRedAPD to 1.2.3.
 
